[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beslang-lang"
version = "0.1.0"
description = "BesLang: a toy programming language using Filipino Gen Z slang, with its own lexer, parser, and interpreter"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Angelo Tano", email = "angelotano35@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
beslang = "beslang.cli:main"

[project.urls]
Homepage = "https://github.com/angelotano35-prod/beslang"
